some features for autodeployer

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,10 @@
     ],
     "require": {
         "slim/slim": "~2.6"
+    },
+    "autoload": {
+        "psr-4": {
+            "Models\\" : "src/models"
+        }
     }
 }
