--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-        "slim/slim": "~2.6"
+        "slim/slim": "~2.6",
+        "guzzle/guzzle": "3.8.0"
     },
     "autoload": {
         "psr-4": {
